# fixed_point128

./: .gitignore  LICENSE  NatvisFile.natvis  README.md  code_analysis.ruleset  cpp.hint  fixed_point.h  fixed_point128.cpp  fixed_point128.h  fixed_point128.natvis  fixed_point128.sln  fixed_point128.vcxproj  fixed_point128.vcxproj.filters
.github/workflows/: main.yml
DoxyGen/: Doxyfile
gtest/: CMakeLists.txt  CMakeLists.txt.bak  fixed_point128_gtest.cpp  float128_gtest.cpp  gtest_shared.h  int128_t_gtest.cpp  readme.txt  setup.bat  test.bat  test_failed.bat  uint128_t_gtest.cpp
inc/: fixed_point128 - Copy.h  fixed_point128.h  fixed_point128_shared.h  float128.h  int128_t.h  uint128_t.h
src/: Bench.cpp  fixed_point128.cpp
